--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ scipy = "^1.7.3"
 loguru = "^0.6.0"
 PyYAML = "^6.0"
 pyserial = "^3.5"
+matlabengine = "^9.14.3"
+PyVISA-py = "^0.7.0"
 
 [tool.poetry.dev-dependencies]
 
